# machine-learning-cpp

./: CMakeLists.txt  README.md
src/: main.cpp  neural_layer.hpp  neural_network.hpp  perceptron.hpp  serializer.hpp
